--- a/course-project-starting-setup/functions/package.json
+++ b/course-project-starting-setup/functions/package.json
@@ -16,12 +16,16 @@
   "dependencies": {
     "cors": "^2.8.5",
     "firebase-admin": "^10.3.0",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "web-push": "^3.5.0"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^0.2.0"
   },
-  "private": true
+  "private": true,
+  "scripts": {
+    "web-push": "web-push"
+  }
 }
