--- a/course-project-starting-setup/functions/package.json
+++ b/course-project-starting-setup/functions/package.json
@@ -2,21 +2,19 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "lint": "eslint .",
-    "serve": "firebase emulators:start --only functions",
-    "shell": "firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "web-push": "web-push"
   },
   "engines": {
     "node": "16"
   },
   "main": "index.js",
   "dependencies": {
+    "@google-cloud/storage": "1.7",
+    "busboy": "^1.6.0",
     "cors": "^2.8.5",
     "firebase-admin": "^10.3.0",
     "firebase-functions": "^3.18.0",
+    "uuid-v4": "^0.1.0",
     "web-push": "^3.5.0"
   },
   "devDependencies": {
@@ -24,8 +22,5 @@
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^0.2.0"
   },
-  "private": true,
-  "scripts": {
-    "web-push": "web-push"
-  }
+  "private": true
 }
